test/syntax/errors/06_unknown_char_backtick.sg
// expect-error: illegal characters
// The '`' character is not part of the Seagrass alphabet.
` this is not a comment
